Let Krita open invalid PSD files

Some weird web apps generate invalid invalid PSD files with the
layer-mask-section size tag set incorrectly. We can still make some
effort on trying to load these file, though we give no guarantess.

BUG:444844