libs/psd/psd_layer_section.cpp
@@ -203,28 +203,36 @@ bool PSDLayerMaskSection::readPsdImpl(QIODevice &io)
 {
     dbgFile << "(PSD) reading layer section. Pos:" << io.pos() << "bytes left:" << io.bytesAvailable();
 
-    layerMaskBlockSize = 0;
+    // https://www.adobe.com/devnet-apps/photoshop/fileformatashtml/#50577409_21849
+    boost::optional<quint64> layerMaskBlockSize = 0;
+
     if (m_header.version == 1) {
         quint32 _layerMaskBlockSize = 0;
-        if (!psdread(io, _layerMaskBlockSize) || _layerMaskBlockSize > (quint64)io.bytesAvailable()) {
-            error = QString("Could not read layer block size. Got %1. Bytes left %2").arg(_layerMaskBlockSize).arg(io.bytesAvailable());
-            return false;
-        }
+        SAFE_READ_EX(psd_byte_order::psdBigEndian, io, _layerMaskBlockSize);
         layerMaskBlockSize = _layerMaskBlockSize;
     } else if (m_header.version == 2) {
-        if (!psdread(io, layerMaskBlockSize) || layerMaskBlockSize > (quint64)io.bytesAvailable()) {
-            error = QString("Could not read layer block size. Got %1. Bytes left %2").arg(layerMaskBlockSize).arg(io.bytesAvailable());
-            return false;
-        }
+        SAFE_READ_EX(psd_byte_order::psdBigEndian, io, *layerMaskBlockSize);
     }
 
     qint64 start = io.pos();
 
-    dbgFile << "layer block size" << layerMaskBlockSize;
+    dbgFile << "layer block size" << *layerMaskBlockSize;
 
-    if (layerMaskBlockSize == 0) {
+    if (*layerMaskBlockSize == 0) {
         dbgFile << "No layer info, so no PSD layers available";
         return false;
+    }
+
+    /**
+     * PSD files created in some weird web applications may
+     * have invalid layer-mask-block-size set. Just do a simple
+     * sanity check to catch this case
+     */
+    if (static_cast<qint64>(*layerMaskBlockSize) > io.bytesAvailable()) {
+        warnKrita << "WARNING: invalid layer block size. Got" << *layerMaskBlockSize << "Bytes left" << io.bytesAvailable() << "Triggering a workaround...";
+
+        // just don't use this value for offset recovery at the end
+        layerMaskBlockSize = boost::none;
     }
 
     if (!readLayerInfoImpl(io)) {
@@ -290,8 +298,10 @@ bool PSDLayerMaskSection::readPsdImpl(QIODevice &io)
 
     globalInfoSection.read(io);
 
-    /* put us after this section so reading the next section will work even if we mess up */
-    io.seek(start + static_cast<qint64>(layerMaskBlockSize));
+    if (layerMaskBlockSize) {
+        /* put us after this section so reading the next section will work even if we mess up */
+        io.seek(start + static_cast<qint64>(*layerMaskBlockSize));
+    }
 
     return true;
 }
